fix img position on small browser

--- a/src/AuthorizedRoutes/Memes/MemeContent/memeContent.scss
+++ b/src/AuthorizedRoutes/Memes/MemeContent/memeContent.scss
@@ -31,6 +31,12 @@
   @media only screen and (max-width: 660px) {
     &-section-wrapper {
       @include flexbox(column);
+
+      .memeContent-content-left {
+        > img {
+          margin: auto;
+        }
+      }
     }
   }
 }
